# pygotm_igotm

./: CMakeLists.txt  setup.py
pygotm/: CMakeLists.txt  __init__.py  setup.py
src/: python_gotm.F90  setup.py
src/pygotm.in/: __init__.py
